fix: overlapping on chat bubble

--- a/app/css/custom-styles.css
+++ b/app/css/custom-styles.css
@@ -113,16 +113,25 @@ section.plck-section h2 {
     content: "🤝";
 }
 
-/* Change position of Cookies and Chat modals on scroll over the footer */
+/* Chatbox */
 
-.bottom-120, #crisp-chatbox div a.bottom-120 {
+/* Change position of Cookies and Chat modals on scroll over the footer */
+.bottom-120,
+#crisp-chatbox div a.bottom-120 {
     bottom: 120px !important;
 }
 
+/*automatic message to not overlapping with chat bubble*/
+a.bottom-120 span .cc-1fs0[data-id="new_messages"] {
+    margin-bottom: 100px !important;
+}
+/*chat-window to not overlapping with chat bubble*/
+.cc-1hqb[data-visible="true"]:has(+ .bottom-120) {
+    margin-bottom: 100px !important;
+    }
 
-/* Chatbox */
 .crisp-client .cc-tlyw.cc-tlyw {
- z-index: 4;
+    z-index: 60;
 }
 
 .crisp-client .cc-tlyw .cc-kxkl .cc-nsge span.cc-imbb {
